# LisitraMpandray

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build_dev.bat  build_release.bat  dev.ps1  index.html  package-lock.json  package.json  tailwind.config.js
assets/: logo_data_uri.txt
src/: app.rs  lib.rs  theme.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_pin_and_audits.sql
src-tauri/resources/: README.txt
src-tauri/src/: api_server.rs  config.rs  db.rs  export.rs  lib.rs  main.rs  remote_client.rs
src-tauri/src/db/: error.rs  mod.rs  models.rs  repo.rs
src/components/: contribution_edit_modal.rs  contribution_modal.rs  icons.rs  member_form.rs  member_page.rs  member_table.rs  mod.rs  modal_wrapper.rs  navbar.rs  phone_input.rs  sky_canvas.rs  theme_switcher.rs  titlebar.rs  transfer_modal.rs  year_toast.rs
src/models/: contribution.rs  member.rs  membre.rs  mod.rs  year_summary.rs
src/pages/: accueil.rs  archives.rs  cathekomens.rs  communiants.rs  mod.rs  setup.rs
src/services/: config_service.rs  db_service.rs  mod.rs
style/: fonts.css  main.css
