[workspace]
members = ["src-tauri"]
resolver = "2"

[package]
name = "eglise-gestion"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos          = { version = "0.7", features = ["csr"] }
leptos_router   = { version = "0.7" }
wasm-bindgen    = "0.2"
wasm-bindgen-futures = "0.4"
js-sys          = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "Storage",
    "MediaQueryList",
    "console",
] }
# Note : Function, Promise, Reflect viennent de js-sys, pas de web-sys
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[profile.release]
opt-level    = "z"
lto          = true
codegen-units = 1
panic        = "abort"
