[package]
name    = "fjkm-ambalavao-isotry-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name       = "fjkm_ambalavao_isotry_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = [] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
sqlx        = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
tokio       = { version = "1", features = ["full"] }
chrono      = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
uuid             = { version = "1", features = ["v4"] }
rust_xlsxwriter  = "0.80"
axum        = { version = "0.7", features = ["json"] }
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tower-http  = { version = "0.5", features = ["cors"] }
sha2        = "0.10"
